(19/02) Variáveis, operadores aritméticos e E/S

--- a/02-variaveis.html
+++ b/02-variaveis.html
@@ -5,17 +5,152 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Váriaveis</title>
     <script>
-	//Declarando uma variavel sem valor inicial
-    let x
-    alert(x)// aparece undefinid( pois ão tem valor definido)
-	//Atribuindo valor a uma variável
-	x=5
-    alert(x)
-    x= 'Juliana'
-alert(x)
-//Declarando uma variável com valor inicial
-let y = 8.75
-alert(y)
+	 // Declarando uma variável sem valor
+
+        let x
+
+        //alert(x) // Exibirá undefined
+
+
+
+        // Atribuindo valor a uma variável
+
+        x = 5
+
+        //alert(x)
+
+
+
+        x = 'Fausto'
+
+        //alert(x)
+
+
+
+        // Declarando uma variável com valor inicial
+
+        let y = 8.75
+
+        //alert(y)
+
+
+
+        // Declarar múltiplas variáveis de uma só vez
+
+        let a = 15, b = 4.5, c = 2
+
+
+
+        // Operadores aritméticos
+
+
+
+        //alert(a - b) // Subtração
+
+        //alert(a * b) // Multiplicação
+
+        //alert(a / b) // Divisão
+
+        //alert(a + b) // Soma
+
+        //alert(a % c) // Resto da divisão inteira (módulo)
+
+        //alert(a ** c) // Potenciação
+
+
+
+        let d = '3' // Uma string que contém um número dentro
+
+        
+
+        // Se uma string contém dentro dela um número válido e essa string é usada
+
+        // em expressões aritméticas, o JavaScript a converá em número e fara a
+
+        // operação normalmente, na MAIORIA DOS CASOS
+
+
+
+        //alert(a - d)  // Subtração de número e string? OK
+
+        //alert(a * d)  // Multiplicação de número e string? OK
+
+        //alert(a / d) // Divisão de número por string? OK
+
+        //alert(a % d)    // Módulo da divisão de número por string?
+
+        //alert(a ** d)     // Potencição de número elevado a string?
+
+        
+
+        // O sinal + em JS tem duas funções:
+
+        // 1) Se todos os seus operandos forem números, ele fará a soma
+
+        // 2) Se algum dos seus operandos for string, será feita uma concatenação de strings
+
+        //alert(a + d)        // Soma de número com string?
+
+
+
+        // Concatenando strings
+
+        let msg1 = 'Bom'
+
+        let msg2 = 'dia'
+
+        //alert(msg1 + ' ' + msg2)
+
+
+
+        //alert('Teste' + 1 + 2 + 3)  // Ocorrerá concatenação (resultado será Teste123)
+
+
+
+        let e = 'batata'
+
+
+
+        //alert(a - e)  // Resultado é NaN = Not a Number
+
+        //alert(a * e)    // NaN
+
+        //alert(a / e)      // NaN
+
+        //alert(a + e)        // Resultado é 15batata (concatenação)
+
+
+
+        // TIPOS DE DADOS
+
+        let teste
+
+        //alert(typeof teste)     // undefined
+
+
+
+        teste = 1000
+
+        //alert(typeof teste)       // number
+
+
+
+        teste = "Fatec Franca"
+
+        //alert(typeof teste)         // string
+
+
+
+        teste = true
+
+        //alert(typeof teste)           // boolean
+
+
+
+        teste = 3.1416
+
+        alert(typeof teste)          // number
+
 </script>
 </head>
 <body>
