--- a/ex01-par-impar.html
+++ b/ex01-par-impar.html
@@ -16,7 +16,8 @@
             prompt(). Determine se o número digitado é par
             ou ímpar e informe ao usuário usando alert().
         */
-        let numero = parseInt(prompt('Informe um número '))
+        let numero = parseInt(prompt('Informe um número inteiro menor que 1000 '))
+            let numero: any
         let total=numero/2;
         if(isNaN(numero)){ // O resultado da conversão foi NaN?
             alert('Desculpe-me, mas isso que você informou não é um número.')
