--- a/09-loops3.html
+++ b/09-loops3.html
@@ -31,6 +31,10 @@
     for(let x=1; x<=100;x+=3){// i +=3 significa i=i+3
     document.write(x +'<br>')
     }
+    // Características do loop for
+        // 1) Quantidade de execuções: determinada ou determinável
+        // 2) Garantia de execução: 0 vezes (sem garantia)
+        // 3) Local de teste: no início
     </script>	
 </head>
 <body>
