--- a/ex01-par-impar.html
+++ b/ex01-par-impar.html
@@ -16,18 +16,22 @@
             prompt(). Determine se o número digitado é par
             ou ímpar e informe ao usuário usando alert().
         */
-        let numero = parseInt(prompt('Informe um número inteiro menor que 1000 '))
-            let numero: any
-        let total=numero/2;
-        if(isNaN(numero)){ // O resultado da conversão foi NaN?
+       //parseint(): tenta coverter a entrada em um numero valido
+       //retorna NaN se não conseguir
+        let numero = parseInt(prompt('Informe um número inteiro  '))
+          
+        //Testando se é realmnente um número
+        if(isNaN(numero)){ // O resultado da conversão foi NaN? conversao falhou
             alert('Desculpe-me, mas isso que você informou não é um número.')
         }
-        else if(numero%2 === 0){
-	        alert("Par");
-            }else{
-	        alert("Impar");
+        //verificando se o resto da divisão do número por 2 deu 0
+        else if(numero % 2 === 0) {
+	        alert("O número é Par");
             }
-alert(total);
+            else{
+	        alert("O número é Impar");
+            }
+
         
     </script>
 </head>
