--- a/13-formulario-DOM.html
+++ b/13-formulario-DOM.html
@@ -95,6 +95,28 @@
         // Modo "chato" do JavaScript
         'use strict'
         
+         /* Captura dos elementos */
+        const elPrimeiroNome = document.getElementById('primeiro-nome')
+        const elSobrenome = document.getElementById('sobrenome')
+        const elFormaTratamento = document.getElementById('forma-tratamento')
+        const elMasculino = document.getElementById('masculino')
+        const elFeminino = document.getElementById('feminino')
+        const elHoraDia = document.querySelector('#hora-dia') 
+        const elAlert = document.querySelector('#alert')
+        const elDocument = document.querySelector('#document')
+        const elSaudacao = document.querySelector('#saudacao')
+        const elEnviar = document.querySelector('#enviar')
+
+        function validar() {
+            // Retorna true caso todos os campos do formulário tiverem
+            // sido preenchidos corretamente, ou false, caso contrário
+
+            if(elPrimeiroNome.value === '') {
+                alert('O primeiro nome deve ser preenchido.')
+                elPrimeiroNome.focus()  // Coloca o cursor no campo
+                return false
+            }
+        }
     </script>
 </body>
 </html>
