--- a/02-variaveis.html
+++ b/02-variaveis.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Váriaveis</title>
+    <title>Variáveis</title>
     <script>
-	 // Declarando uma variável sem valor
+        // Declarando uma variável sem valor
         let x
         //alert(x) // Exibirá undefined
 
@@ -79,8 +79,7 @@
         teste = 3.1416
         alert(typeof teste)          // number
 
-
-</script>
+    </script>
 </head>
 <body>
     
