--- a/03-entrada-saida.html
+++ b/03-entrada-saida.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entrada e Saída</title>
-<script>
-    let nome
-	//Entrada usando o metodo input()
-	nome = prompt('Qual é o seu nome?')
-	//Saída usando aler()
-    alert ('olá, ' + nome + '!')
+    <script>
+        let nome
+        // Entrada usando o método prompt()
+        nome = prompt('Qual é o seu nome?')
+        // Saída usando alert()
+        alert('Olá, ' + nome + '!')
+        // Saída usando document.write()
+        document.write('Olá, ' + nome + '!')
 
-    //Saída usando document.write()
-    document.write('olá, ' + nome + '!')
-
-    // Para casos de perguntas do tipo sim/não, existe o confirm()
-    let resposta= confirm ('Deseja realmente apagar todos os seus dados?')
-    alert (resposta)
-
-</script>
-
+        // Para casos de perguntas do tipo sim/não, existe o confirm()
+        let resposta = confirm('Deseja realmente apagar todos os seus dados?')
+        alert(resposta)
+    </script>
 </head>
 <body>
+    
+</body>
+</html>
     
 
 </body>
