--- a/08-loops2.html
+++ b/08-loops2.html
@@ -24,6 +24,11 @@
         } while(num !== 0)
 
         alert(`A soma dos números informados é ${soma}.`)
+
+        // Características do loop do..while
+        // 1) Quantidade de execuções: indeterminada (1+)
+        // 2) Garantia de execução: 1 vez
+        // 3) Local de teste: no final
         
     </script>
 </head>
