--- a/09-loops3.html
+++ b/09-loops3.html
@@ -9,33 +9,35 @@
         // Modo "chato" do JavaScript
         'use strict'
 
-        //Contagem de 1 a 10
-	    // três partes do loop for (separados por ponto e virgula)
-	    //1) inicialização: a variavel de controle ganha seu valor inicial
-        //2º) condição: o loop dor executa enquanto essa condição for verdadeira
-	    //3º)Incremento: responsável por alterar o valor da variavel de controle
-	
-	
-	for(let i =1; i<=10; i++){// i++ significa i=i+1
-	document.write(i,'<br>')
-    }
-    document.write('<hr>')// horizontal ruler = traço horizontal
-     //Contagem de 10 a 11
-    for(let i=10; i>=1;i--){
-    document.write(i +'<br>')
-    }
+        // Contagem de 1 a 10
+        // Três partes do loop for (separadas por ponto-e-vírgula)
+        // 1) Inicialização: a variável de controle ganha seu valor inicial
+        // 2) Condição: o loop for executa enquanto essa condição for verdadeira
+        // 3) Incremento: responsável por alterar o valor da variável de controle
+        for(let i = 1; i <= 10; i++) { // i++ significa i = i + 1
+            document.write(i + '<br>') // <br> = quebra de linha em HTML
+        }
 
-    document.write('<hr>')// horizontal ruler = traço horizontal
+        document.write('<hr>')  // Horizontal ruler = traço horizontal
 
-    //Contagem de 1 a 100, saltando de 3 em 3
-    for(let x=1; x<=100;x+=3){// i +=3 significa i=i+3
-    document.write(x +'<br>')
-    }
-    // Características do loop for
+        // Contagem regressiva de 10 a 1
+        for(let i = 10; i >= 1; i--) {  // i-- significa i = i - 1
+            document.write(i + '<br>')
+        }
+        
+        document.write('<hr>')  // Horizontal ruler = traço horizontal
+
+        // Contagem de 1 a 100, saltando de 3 em 3
+        for(let x = 1; x <= 100; x += 3) {  // i += 3 signfica i = i + 3
+            document.write(x + '<br>')
+        }
+
+        // Características do loop for
         // 1) Quantidade de execuções: determinada ou determinável
         // 2) Garantia de execução: 0 vezes (sem garantia)
         // 3) Local de teste: no início
-    </script>	
+
+    </script>
 </head>
 <body>
     
