--- a/ex02-ano-bissexto.html
+++ b/ex02-ano-bissexto.html
@@ -28,8 +28,9 @@
             2013: não é
 
             A regra vale para anos >= 1582
-      */
-        let ano = parseInt(prompt('Informe um ano maior ou igual a 1582'))
+        */
+
+        let ano = parseInt(prompt('Informe um ano maior ou igual a 1582:'))
 
         /*
         if(isNaN(ano) || ano < 1582) {
@@ -51,21 +52,26 @@
         }
         */
 
-        if(isNaN(ano) || ano < 1582){
-            alert('ERRO: O ano informado é inválido!')
+        if(isNaN(ano) || ano < 1582) {
+            alert('ERRO: o ano informado é inválido!')
         }
-        //Todas as regras de bissexto em uma unica expressao
-        else if (ano % 400 === 0 || (ano % 4 === 0 && !(ano % 100 === 0))){
+        // Todas as regras de bissexto em uma única expressão
+        else if(ano % 400 === 0 || (ano % 4 === 0 && !(ano % 100 === 0))) {
             //alert('O ano ' + ano + ' é bissexto.')
-            //Mensagem usando string template com interpolacao de variavel
-            alert('O ano ${ano} é bissexto!')
+            // Mensagem usando string template com interpolação de variável
+            alert(`O ano ${ano} é bissexto.`)
         }
         else {
             // alert('O ano ' + ano + ' NÃO é bissexto.')
             // Mensagem usando string template com interpolação de variável
-            alert('O ano ${ano} NÃO é bissexto!')
+            alert(`O ano ${ano} NÃO é bissexto.`)
         }
-        
+
+        // Outro exemplo de interpolação de variáveis em string template
+        //let a = 5, b = 4, c = 2
+        //alert('O valor de ' + a + ' somado com ' + b + ' somado com ' + c + ' é igual a ' + (a + b + c))
+        //alert(`O valor de ${a} somado com ${b} somado com ${c} é igual a ${a + b + c}`)
+
     </script>
 </head>
 <body>
