--- a/ex03 - Calculadora.html
+++ b/ex03 - Calculadora.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página modelo</title>
+    <title>Modelo de documento HTML</title>
     <script>
-        // Ativa verificações adicionais de variáveis
-        // Modo "chato" do JavaScript
+        // 'use strict' impede que variáveis sejam declaradas
+        // sem o uso de let, var ou const
+        // Inicializar variáveis diretamente é má prática de
+        // programação
         'use strict'
-        
-         /*
+                
+        /*
             Solicite ao usuário para informar dois números e um operador
             matemático. Você usará três prompt(), um para cada número e
             o terceiro para o operador.
@@ -45,8 +47,6 @@
         else {
             alert('ERRO: o operador informado é inválido!')
         }
-
-
 
     </script>
 </head>
