--- a/ex05- placas - mercosul.html
+++ b/ex05- placas - mercosul.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página modelo</title>
+    <title>Modelo de documento HTML</title>
     <script>
-        // Ativa verificações adicionais de variáveis
-        // Modo "chato" do JavaScript
+        // 'use strict' impede que variáveis sejam declaradas
+        // sem o uso de let, var ou const
+        // Inicializar variáveis diretamente é má prática de
+        // programação
         'use strict'
-
-         /*
+        
+        /*
             Recentemente, as placas de automóveis no Brasil passaram a usar
             o chamado "modelo Mercosul".
 
@@ -78,7 +80,7 @@
             default:  // poderia ser também case 9:
                 alert('J é a letra correspondente ao dígito.')
         }
-        
+
     </script>
 </head>
 <body>
