--- a/ex08-CORRECAO-for-intervalo.html
+++ b/ex08-CORRECAO-for-intervalo.html
@@ -1,153 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página modelo</title>
+    <title>Modelo de documento HTML</title>
     <script>
-        // Ativa verificações adicionais de variáveis
-        // Modo "chato" do JavaScript
+        // 'use strict' impede que variáveis sejam declaradas
+        // sem o uso de let, var ou const
+        // Inicializar variáveis diretamente é má prática de
+        // programação
         'use strict'
+        
+        /*
+            Implemente um loop for que, começando em 3, indo até 1000, e
+            avançando de 3 em 3, imprima com document.write() apenas os
+            valores da variável de controle que sejam múltiplos de 7.
+        */
 
-        /**************************************************************
-         * FUNÇÃO SEM RETORNO
-         * 
-         * Geralmente, funções retornam um valor para quem as chama
-         * por meio da palavra-chave return. No entanto, existem funções
-         * que apenas desempenham uma tarefa, sem retornar valor algum.
-         * ************************************************************/
-
-        // Declaração da função
-        function traco(tamanho) {
-            for (let i = 1; i <= tamanho; i++) {
-                document.write('-')
+        for(let i = 3; i <= 1000; i += 3) {
+            if(i % 7 == 0) {
+                document.write(i + '<br>')
             }
-            document.write('<br>')    // Pula linha
-            // Note que, nesta função, não há a palavra-chave return
         }
-
-        // Chamadas da função. Note também que a função NÃO é atribuída a uma variável
-        traco(25)
-        traco(50)
-        traco(15)
-
-        /*********************************************************
-         * FUNÇÃO SEM PARÂMETRO
-         * 
-         * Uma função (independentemente se retorna ou não algum valor) pode
-         * não receber parâmetro algum. Nesse caso, ficam os parênteses vazios
-         * à frente do nome da função
-         * *******************************************************/
-
-        function agora() {    // Retorna a hora atual do computador
-            let diaAtual = new Date
-            // Veja, na linha abaixo, outras três funções que também não recebem parâmetros
-            return diaAtual.getHours() + ':' + diaAtual.getMinutes() + ':' + diaAtual.getSeconds()
-        }
-
-        // Chama a função e mostra o resultado em um alert()
-        alert(agora())
-
-        // Função sem parâmetro e sem valor de retorno
-        function msgErro() {  // Declaração da função
-            alert('ERRO INESPERADO. Contate o suporte técnico pelo ramal XXX.')
-        }
-
-        msgErro() // Chamada da função
-
-        /********************************************************************
-         * FUNÇÕES DETERMINÍSTICAS x FUNÇÕES NÃO-DETERMINÍSTICAS
-         * 
-         * Função DETERMINÍSTICA -> dados os mesmos argumentos, retornará sempre
-         * o mesmo resultado
-         * 
-         * Função NÃO-DETERMINÍSTICA -> o valor de retorno independe do(s) parâmetro(s)
-         * ******************************************************************/
-
-        // Exemplo de função determinística
-        function potencia(base, expoente) {
-            return base ** expoente      // ** é o operador de exponenciação
-        }
-
-        alert(potencia(2, 5))   // 32, sempre
-        alert(potencia(3, 3))   // 27, sempre
-
-        // A função agora(), declarada mais acima, é um exemplo de função não-determinística.
-        // A cada execução, retornará um resultado diferente.
-
-        // Um exemplo de função não-determinística fornecida pelo próprio Javascript é a 
-        // Math.random(). A cada execução, ela retornará um número diferente, na faixa entre 0 e 1.
-        alert('Número aleatório: ' + Math.random())
-        alert('Número aleatório: ' + Math.random())
-
-        // Função não-determinísica que gera um número aletório inteiro entre 1 e 60.
-        function megasena() {
-            // Os números gerados por Math.random() incluem o número 0, mas não incluem o número 1.
-            // Portanto, ao multiplicar por 60, conseguimos números entre 0 e 59.
-            // Para corrigir esse problema, adicionamos 1 ao resultado.
-            // Para retirar as casas decimais, usamos a função Math.floor()
-            return Math.floor(Math.random() * 60 + 1)
-        }
-
-        // Eventualmente, podem sair números repetidos
-        //alert('1º número para a megasena: ' + megasena())
-        //alert('2º número para a megasena: ' + megasena())
-        //alert('3º número para a megasena: ' + megasena())
-        //alert('4º número para a megasena: ' + megasena())
-        //alert('5º número para a megasena: ' + megasena())
-        //alert('6º número para a megasena: ' + megasena())
-
-        for (let i = 1; i <= 6; i++) {
-            alert(i + 'º número para a megasena: ' + megasena())
-        }
-
-        /*********************************************************************
-         * FUNÇÃO COM PARÂMETRO OPCIONAL
-         * 
-         * O(s) último(s) parâmetros de uma função podem ser transformados em
-         * parâmetros opcionais, caso se forneça um valor padrão a ser utilizado
-         * no caso de esse(s) parâmetro(s) não ter(em) sido passado(s).
-         * *******************************************************************/
-
-        // O parâmetro forma foi transformado em opcional
-        function calcArea(base, altura, forma = 'Q') {
-            let area
-            switch (forma) {
-                case 'Q':   // Quadrilátero
-                    area = base * altura
-                    break
-
-                case 'T':   // Triângulo
-                    area = base * altura / 2
-                    break
-
-                case 'E':   // Elipse
-                    area = (base / 2) * (altura / 2) * Math.PI
-                    break
-
-                default:    // (formas inválidas)
-                    area = NaN      // Área inválida
-            }
-            return area
-        }
-
-        let areaTriangulo = calcArea(10, 7, 'T')
-        let areaElipse = calcArea(6, 4, 'E')
-        let areaQuadr1 = calcArea(8, 2.5, 'Q')
-
-        // Note que, na chamada a seguir, não será passado o último
-        // parâmetro. Nesse caso, será calculada a área de um quadrilátero,
-        // pois o valor padrão do parâmetro opcional é 'Q'.
-        let areaQuadr2 = calcArea(5, 9)
-        alert('Área de um quadrilátero de 5x9: ' + areaQuadr2)
-        // Ou, diretamente: alert(calcArea(5, 9))
 
     </script>
 </head>
-
 <body>
-
+    
 </body>
-
-</html> 
+</html>
