--- a/01-intro.html
+++ b/01-intro.html
@@ -3,37 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ola, Mundo em JavaScript</title>
+    <title>Olá, mundo em JavaScript</title>
     <style>
-        h1{
-	        color:blue; 
+        h1 {
+            color: blue;
+            text-align: center;
         }
-        p{
-	        font-family:"Courier New";
-            text-align: cednter;
+        p {
+            font-family: "Courier New";
+            text-align: right;
         }
-        button{
+        button {
             font-size: 20pt;
             color: red;
             background: yellow;
-            text-align: center;
-            }
-body{
-background-color: burlywood;
-}
-</style>
+        }
+        body {
+            background-color: burlywood;
+        }
+    </style>
 </head>
 <body>
-    <h1>Olá, Mundo!</h1>
-    <p>Programa de Saudação em JavaScript</p>
-    <button id="saudar">Saudar</button>
+    <h1>Olá, mundo!</h1>
+    <p>Programa de saudação em JavaScript</p>
+    <button id="saudar">Saudação</button>
     <script>
-        //Função que será executada quando o botão "sauda" for clicado
-    function clique(){
-		alert('Olá, usuário(a)!')
-    }
-    //Fazendo com que o botão, ao ser clicado, execute a função
-    document.querySelector('#saudar').addEventListener('click', clique)
-</script>
+        // Função que será executada quando o botão "saudar" for clicado
+        function exibirMensagem() {
+            alert('Olá, usuário(a)!')
+        }
+        // Fazendo com que o botão, ao ser clicado, execute a função
+        document.querySelector('#saudar').addEventListener('click', exibirMensagem)
+    </script>
 </body>
 </html>
