--- a/04-comparacoes.html
+++ b/04-comparacoes.html
@@ -6,23 +6,29 @@
     <title>Comparações</title>
     <script>
         // Ativa verificações adicionais de variáveis
-        // Modo "Chato" do JavaScrpit
+        // Modo "chato" do JavaScript
         'use strict'
-        //parseInt() -> Tenta converter um texto em número, se possível
+
+        // parseInt() -> TENTA converter um texto em número, se possível
         // Caso o texto não contenha um número válido, o resultado será NaN
         // (Not a Number)
         let numero = parseInt(prompt('Informe um número inteiro MENOR que 1000:'))
-        if(isNaN(numero)){ // O resultado da conversão foi NaN?
+
+        if(isNaN(numero)) {  // O resultado da conversão foi NaN?
             alert('Desculpe-me, mas isso que você informou não é um número.')
-        } else if(numero < 1000){
+        }
+        else if(numero < 1000) {
             alert('Parabéns, você acertou!')
-            // JS, um = é usado para atribuição (colocar valor em variável)
-            // Para comparações, precisa PELOS MENOS 2 sinais de ==
-        } else if(numero == 1000){
-            alert('Desculpe-me, mas 100 NÃO É menor do que 1000, é igual.')
-        } else {
+        }
+        // JS, um = é usado para atribuição (colocar valor em variável)
+        // Para comparações, precisamos de PELO MENOS 2 sinais de ==
+        else if(numero == 1000) {
+            alert('Descupe-me, mas 1000 NÃO É menor do que 1000, é igual.')
+        }
+        else {
             alert('Infelizemente, você não acertou!')
         }
+
     </script>
 </head>
 <body>
