--- a/05-operadores-logicos.html
+++ b/05-operadores-logicos.html
@@ -8,50 +8,79 @@
         // Ativa verificações adicionais de variáveis
         // Modo "chato" do JavaScript
         'use strict'
+        
+        // 5! = 5 * 4 * 3 * 2 * 1 (120)
+        // 4! = 4 * 3 * 2 * 1 (24)
 
-        /* OPERADORES LÓGICOS EM JS
-            && -> E lógico (AND)
-            || -> OU lógico (OR)
-            !  -> NÃO lógico (NOT)
+        /*
+        let fat5 = 1
+        for(let i = 5; i > 1; i--) {
+            fat5 = fat5 * i
+        }
+        alert('O fatorial de 5 é ' + fat5)
+
+        let fat4 = 1
+        for(let i = 4; i > 1; i--) {
+            fat4 = fat4 * i
+        }
+        alert('O fatorial de 4 é ' + fat4)
         */
-        let a = 5, b = 10, c = 0
 
-        // TESTANDO O OPERADOR &&
+        // Princípio DRY = DON'T REPEAT YOURSELF (não se repita)
 
-        document.write(a > 1 && b < 15)
+        // Função é um trecho de código que é escrito apenas uma vez e
+        // pode ser invocado (executado) várias vezes
 
-        // <br> = breaking row (quebra de linha)
-        document.write('<br>')  
-        document.write(b === 10 && c < 0)
-
-        // <hr> = horizontal ruler (traço horizontal)
-        document.write('<hr>')
-
-        if(a > 1 && b < 15) {
-            document.write('A condição é verdadeira')
-        }
-        else {
-            document.write('A condição é falsa')
+        // fatorial -> nome da função
+        // num -> parâmetro ou argumento da função
+        function fatorial(num) {        // Declaração da função
+            let fat = 1
+            for(let i = num; i > 1; i--) {
+                fat *= i            // Equivale a: fat = fat * i
+            }
+            return fat              // Retorno da função
         }
 
-        document.write('<hr>')
+        // Chamada de função. O valor retornado pela função será
+        // atribuído à variável x.
+        let x = fatorial(5)
+        let y = fatorial(4)
+        alert('O fatorial de 5 calculado pela função é ' + x)
+        alert('O fatorial de 4 calculado pela função é ' + y)
 
-        // TESTANDO O OPERADOR || (pipe pipe)
-        // !=  -> operador de diferença
-        // !== -> operador de diferença exata (exatamente diferente)
-        document.write(a === 5 || c !== 0)
-        document.write('<hr>')
-        document.write(b !== 10 || a !== 5)
 
-        document.write('<hr>')
+        // Função para calcular a área de uma das seguintes formas geométricas:
+        // quadriláteros, triângulos e de elipses
+        function calcArea(base, altura, forma) {
+            let area
+            switch(forma) {
+                case 'Q':   // Quadrilátero
+                    area = base * altura
+                    break
 
-        // TESTANDO O OPERADOR ! (not)
-        // Ordem de resolução dos operadores lógicos
-        // 1º: !
-        // 2º: &&
-        // 3º: ||
-        // Essa ordem pode ser modificada com o uso de () 
-        document.write(!(a === 0 && b > 20))
+                case 'T':   // Triângulo
+                    area = base * altura / 2
+                    break
+
+                case 'E':   // Elipse
+                    area = (base / 2) * (altura / 2) * Math.PI
+                    break
+
+                default:    // (formas inválidas)
+                    area = NaN      // Área inválida
+            }
+            return area
+        }
+
+        let areaTerreno = calcArea(8, 25, 'Q')  // Chamada da função
+        alert('Área do terreno: ' + areaTerreno)
+
+        // Chamada de função direto dentro do alert
+        alert('Área do triângulo: ' + calcArea(7, 5, 'T'))
+
+        alert('Área da elipse: ' + calcArea(2, 3, 'E'))
+
+        alert('Área de uma forma não suportada: ' + calcArea(5, 7, 'W'))
 
     </script>
 </head>
