--- a/06-estrutura-switch.html
+++ b/06-estrutura-switch.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Modelo de documento HTML</title>
     <script>
-           /*
+        // 'use strict' impede que variáveis sejam declaradas
+        // sem o uso de let, var ou const
+        // Inicializar variáveis diretamente é má prática de
+        // programação
+        'use strict'
+                
+        /*
             Solicite ao usuário para informar dois números e um operador
             matemático. Você usará três prompt(), um para cada número e
             o terceiro para o operador.
@@ -70,6 +76,7 @@
             alert('ERRO: o operador informado é inválido!')
         }
         */
+
     </script>
 </head>
 <body>
