--- a/11 Funcoes2.html
+++ b/11 Funcoes2.html
@@ -1,118 +1,153 @@
-
-        <!DOCTYPE html>
+!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página modelo</title>
     <script>
         // Ativa verificações adicionais de variáveis
-        // Módulo "chato" do JavaScript
+        // Modo "chato" do JavaScript
         'use strict'
 
-        /* Função sem retorno
-        *
-        * 
-        * Geralmente, funções retornam um valor para quem as chama
-        * que apenas desempenham uma tarefa, sem retornar valor algum.
-        * 
-        */
-       // Declaração da função
-       function traco(tamanho){
-           for(let i= 1;i<=tamanho;i++){
-               document.write('-')
-           }
-           document.write('<br>')       // Pula linha
-           //Note que, nesta função, não há a palavra-chave return
-       }
+        /**************************************************************
+         * FUNÇÃO SEM RETORNO
+         * 
+         * Geralmente, funções retornam um valor para quem as chama
+         * por meio da palavra-chave return. No entanto, existem funções
+         * que apenas desempenham uma tarefa, sem retornar valor algum.
+         * ************************************************************/
 
-       // Chamada da função. Note também que a função NÃO é atribuída a uma variável.
-       traco(28)
-       traco(58)
-       traco(15)
-
-       //FUNÇÃO SEM PARAMETRO
-
-       /*Uma função (independente se retorna ou não algum valor) pode não receber
-       paranentro algum. Nesse cso, ficam os parametros vazios à frente do nome da função
-       */
-
-       function agora() { // Retorna a hora atual do computador
-        let diaAtual = new Date
-        // Veja, na linha abaixo, outras três funções que também não recebem parâmetros
-        return diaAtual.getHours() + ':' + diaAtual.getMinutes() + ':' + diaAtual.getSeconds()
-       }
-
-       // Chama a função e mostra o resultado em um alert()
-       alert(agora())
-
-       //Função sem parametros e sem valor de retorno
-       function msgErro() {
-           alert('ERRO INESPERADO. Contato o suporte técnico pelo ramal XXX.')
-       }
-
-       msgErro() // Chamada de função
-       /**********************************************************************************
-        * FUNÇÃO DETERMINISTICA X FUNÇÕES NÃO-DETERMINISTICA
-        * 
-        * FUNÇÃO DETERMINISTICA - dados os mesmos argumentos, retornara sempre o mesmo resultado
-        * 
-        * FUNÇÃO NÃO-DETERMINISTICA - O Valor de retorno independe dos(s) parametros
-        * **********************************************************************/
-
-        //Ecemplo de funç]ao deterministica
-        function potencia(base, expoente){
-            return base ** expoente  // é o operador de exponenciação
+        // Declaração da função
+        function traco(tamanho) {
+            for (let i = 1; i <= tamanho; i++) {
+                document.write('-')
+            }
+            document.write('<br>')    // Pula linha
+            // Note que, nesta função, não há a palavra-chave return
         }
 
-        alert(potencia(2,5))  // 32, sempre
-        alert(potencia(3,3))  // 27, sempre
+        // Chamadas da função. Note também que a função NÃO é atribuída a uma variável
+        traco(25)
+        traco(50)
+        traco(15)
 
-        //a função agora(), declarada mais acima , é um exemplo de função nao-deterministica
-        // a cada execução, retornara um resultado diferente.
+        /*********************************************************
+         * FUNÇÃO SEM PARÂMETRO
+         * 
+         * Uma função (independentemente se retorna ou não algum valor) pode
+         * não receber parâmetro algum. Nesse caso, ficam os parênteses vazios
+         * à frente do nome da função
+         * *******************************************************/
 
-        //Um exemplo de função não deterninistica fornecida pelo proprio javaScript é a 
-        //Math.random(). A cada execuçãi , ela retornará um néumro diferente, na faixa entre a e 1.
+        function agora() {    // Retorna a hora atual do computador
+            let diaAtual = new Date
+            // Veja, na linha abaixo, outras três funções que também não recebem parâmetros
+            return diaAtual.getHours() + ':' + diaAtual.getMinutes() + ':' + diaAtual.getSeconds()
+        }
 
-        alert('Número aleatorio:' + Math.random())
-        alert('Número aleatorio:' + Math.random())
+        // Chama a função e mostra o resultado em um alert()
+        alert(agora())
 
-        // Função não-deterministica que gera um número  aleatório entre1 e 60
-        function megasena(){
-            //Os números gerados por MAth.random() incluem o número 0, mas não incluem o número 1.
-            //Portanto,  ao multiplicar po 60, conseguimos número entre 0 e 59.
-            //Para coirrigir esse problema, adicionamos 1 ao resultado.
-            //Para retirar as casas decimais, usamos a função MAth.floo()
-            return Math.floor(Math.random()) * 60 + 1
+        // Função sem parâmetro e sem valor de retorno
+        function msgErro() {  // Declaração da função
+            alert('ERRO INESPERADO. Contate o suporte técnico pelo ramal XXX.')
+        }
+
+        msgErro() // Chamada da função
+
+        /********************************************************************
+         * FUNÇÕES DETERMINÍSTICAS x FUNÇÕES NÃO-DETERMINÍSTICAS
+         * 
+         * Função DETERMINÍSTICA -> dados os mesmos argumentos, retornará sempre
+         * o mesmo resultado
+         * 
+         * Função NÃO-DETERMINÍSTICA -> o valor de retorno independe do(s) parâmetro(s)
+         * ******************************************************************/
+
+        // Exemplo de função determinística
+        function potencia(base, expoente) {
+            return base ** expoente      // ** é o operador de exponenciação
+        }
+
+        alert(potencia(2, 5))   // 32, sempre
+        alert(potencia(3, 3))   // 27, sempre
+
+        // A função agora(), declarada mais acima, é um exemplo de função não-determinística.
+        // A cada execução, retornará um resultado diferente.
+
+        // Um exemplo de função não-determinística fornecida pelo próprio Javascript é a 
+        // Math.random(). A cada execução, ela retornará um número diferente, na faixa entre 0 e 1.
+        alert('Número aleatório: ' + Math.random())
+        alert('Número aleatório: ' + Math.random())
+
+        // Função não-determinísica que gera um número aletório inteiro entre 1 e 60.
+        function megasena() {
+            // Os números gerados por Math.random() incluem o número 0, mas não incluem o número 1.
+            // Portanto, ao multiplicar por 60, conseguimos números entre 0 e 59.
+            // Para corrigir esse problema, adicionamos 1 ao resultado.
+            // Para retirar as casas decimais, usamos a função Math.floor()
+            return Math.floor(Math.random() * 60 + 1)
+        }
+
+        // Eventualmente, podem sair números repetidos
+        //alert('1º número para a megasena: ' + megasena())
+        //alert('2º número para a megasena: ' + megasena())
+        //alert('3º número para a megasena: ' + megasena())
+        //alert('4º número para a megasena: ' + megasena())
+        //alert('5º número para a megasena: ' + megasena())
+        //alert('6º número para a megasena: ' + megasena())
+
+        for (let i = 1; i <= 6; i++) {
+            alert(i + 'º número para a megasena: ' + megasena())
+        }
+
+        /*********************************************************************
+         * FUNÇÃO COM PARÂMETRO OPCIONAL
+         * 
+         * O(s) último(s) parâmetros de uma função podem ser transformados em
+         * parâmetros opcionais, caso se forneça um valor padrão a ser utilizado
+         * no caso de esse(s) parâmetro(s) não ter(em) sido passado(s).
+         * *******************************************************************/
+
+        // O parâmetro forma foi transformado em opcional
+        function calcArea(base, altura, forma = 'Q') {
+            let area
+            switch (forma) {
+                case 'Q':   // Quadrilátero
+                    area = base * altura
+                    break
+
+                case 'T':   // Triângulo
+                    area = base * altura / 2
+                    break
+
+                case 'E':   // Elipse
+                    area = (base / 2) * (altura / 2) * Math.PI
+                    break
+
+                default:    // (formas inválidas)
+                    area = NaN      // Área inválida
             }
+            return area
+        }
 
-            //Eventualmente, podem sair números repetidos
-            alert('1º número para a megasena: ' + megasena())
-            alert('2º número para a megasena: ' + megasena())
-            alert('3º número para a megasena: ' + megasena())
-            alert('4º número para a megasena: ' + megasena())
-            alert('5º número para a megasena: ' + megasena())
-            alert('6º número para a megasena: ' + megasena())
+        let areaTriangulo = calcArea(10, 7, 'T')
+        let areaElipse = calcArea(6, 4, 'E')
+        let areaQuadr1 = calcArea(8, 2.5, 'Q')
 
-
-            // colocando os alerts dentro de um for
-            for (let i= 1; i <= 6; i++){
-                alert(i + 'º número para a megasena:' + megasena())
-            }
-
-            /**********************************************************
-             * FUNÇÃO COM PAREMETRO OPCIONAL
-             * 
-             * O(S) ultimos parametros de uma função podem ser transformados em 
-             * parametros ipcionais, caso se forneca um valor padrão a ser utilizado 
-             * noi caso de esse(s) parametros não ter sido passado
-             * ************************************************/
-
-             
+        // Note que, na chamada a seguir, não será passado o último
+        // parâmetro. Nesse caso, será calculada a área de um quadrilátero,
+        // pois o valor padrão do parâmetro opcional é 'Q'.
+        let areaQuadr2 = calcArea(5, 9)
+        alert('Área de um quadrilátero de 5x9: ' + areaQuadr2)
+        // Ou, diretamente: alert(calcArea(5, 9))
 
     </script>
 </head>
+
 <body>
-    
+
 </body>
+
 </html>
