--- a/ex04-dias-mes.html
+++ b/ex04-dias-mes.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página modelo</title>
+    <title>Modelo de documento HTML</title>
     <script>
-        // Ativa verificações adicionais de variáveis
-        // Modo "chato" do JavaScript
+        // 'use strict' impede que variáveis sejam declaradas
+        // sem o uso de let, var ou const
+        // Inicializar variáveis diretamente é má prática de
+        // programação
         'use strict'
-
+        
         /*
             Solicite ao usuário que informe o número correspondente a um
             mês, na faixa entre 1 e 12.
@@ -49,7 +51,7 @@
                     alert('O mês informado pode ter 28 ou 29 dias (em anos bissextos).')
             }
         }
-        
+
     </script>
 </head>
 <body>
